Refactor: refactor code syntax
