# src/routes/api.ts
@@ -1,11 +1,9 @@
 import express from "express";
-import dummyController from "../controllers/dummy.controller";
 import authController from "../controllers/auth.controller";
 import authMiddleware from "../middlewares/auth.middleware";
 
 const router = express.Router();
 
-router.get("/dummy", dummyController.dummy);
 router.post("/auth/register", authController.register);
 router.post("/auth/login", authController.login);
 router.get("/auth/me", authMiddleware, authController.me);
